--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="hero-imagens">
                     <figure><img src="img/camille-brodard-dupe.jpeg" alt="dupe1"></figure>
                     <figure><img src="sweet-july-dupe.jpeg" alt="dupe2"></figure>
-                    <figure><img src="img/cora-pursley-dupe (1).jpeg" alt="dupe3"></figure>
+                    <figure><img src="ginny-ranu-dupe.jpeg" alt="dupe9"></figure>
                     <figure><img src="img/erdnezul-bayarkhuu-dupe.jpeg" alt="dupe4"></figure>
                     <figure><img src="img/limao.png" alt="limao"></figure>
                     <figure><img src="img/sivan-weitz-dupe.jpeg" alt="dupe5"></figure>
