--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="logo">Sweet´ss by Mary</span>
         <nav>
             <ul class="menu">
-                <li><a href="home">Home </a></li>
+                <li><a href="index.html">Home </a></li>
                 <li><a href="receitas">Receitas</a></li>
                 <li><a href="historia">História</a></li>
                 <li><a href="avaliados">Melhores Avaliados</a></li>
@@ -71,6 +71,7 @@
                 <h2 class="confira">Confira as mais amadas!</h2>
             </header>
         <div class="cards">
+          <a href="card1.html">
             <div class="card">
                 <div class="img-brookie">
                     <figure>
@@ -85,7 +86,9 @@
                     A receita de brownie com cookie (Brookie) é uma sobremesa que conquista até os paladares mais exigentes com sua textura única, que combina a densidade do brownie com a crocância dos cookies.
                   </p>
                 </div>
-                </div>   
+                </div> 
+              </a>
+              <a href="card2.html">
                 <div class="card2">
                     <figure>
                         <img src="img/brownie.png" alt="brownie">
@@ -99,6 +102,8 @@
                       </p>
                     </div>
                 </div>
+              </a>
+              <a href="card3.html">
                 <div class="card3">
                     <figure>
                         <img src="img/blueberry muffins.png" alt="blueberry muffins">
@@ -112,6 +117,8 @@
                       </p>
                     </div>
                   </div>
+                </a>
+                <a href="card4.html">
                   <div class="card4">
                     <figure>
                         <img src="img/cinamon roll.png" alt="cinamon">
@@ -125,6 +132,8 @@
                       </p>
                     </div>
                   </div>
+                </a>
+                <a href="card5.html">
                   <div class="card5">
                     <figure>
                         <img src="img/cupcake choco.png" alt="cupcakechoco">
@@ -138,6 +147,8 @@
                       </p>
                     </div>
                 </div>
+              </a>
+              <a href="card6.html">
                 <div class="card6">
                     <figure>
                         <img src="img/macarons.png" alt="macarons">
@@ -151,7 +162,7 @@
                       </p>
                     </div>
                   </div>
-                  
+                </a>
          </div>
         </section>
     </main>
