--- a/card1.html
+++ b/card1.html
@@ -29,5 +29,12 @@
             </button>
        
     </header>
+    <div class="parent">
+    <div class="div1">1</div>
+    <div class="div2">2</div>
+    <div class="div3">3</div>
+    <div class="div4">4</div>
+    <div class="div5">5</div>
+</div>
 </body>
 </html>
