--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/sweet´ss.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../img/sweet´ss.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sweet´ss by Mary</title>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -43,24 +43,22 @@
                 </header>
                 <div class="faixa-carrossel">
                 <div class="hero-imagens">
-                    <figure><img src="img/camille-brodard-dupe.jpeg" alt="dupe1"></figure>
-                    <figure><img src="sweet-july-dupe.jpeg" alt="dupe2"></figure>
-                    <figure><img src="ginny-ranu-dupe.jpeg" alt="dupe9"></figure>
-                    <figure><img src="img/erdnezul-bayarkhuu-dupe.jpeg" alt="dupe4"></figure>
-                    <figure><img src="img/limao.png" alt="limao"></figure>
-                    <figure><img src="img/sivan-weitz-dupe.jpeg" alt="dupe5"></figure>
-                    <figure><img src="img/st cake.png" alt="stcake"></figure>
-                    <figure><img src="eleni-sophocleus-dupe.jpeg" alt="dupe6"></figure>
-                    <figure><img src="jordan-hunter-dupe.jpeg" alt="dupe7"></figure>
-                    <figure><img src="ruby--dupe.jpeg" alt="dupe8"></figure>
-                    <figure><img src="img/erdnezul-bayarkhuu-dupe.jpeg" alt="dupe4"></figure>
-                    <figure><img src="ginny-ranu-dupe.jpeg" alt="dupe9"></figure>
-                    <figure><img src="img/jade-rideout-dupe (1).jpeg" alt="dupe10"></figure>
-                    <figure><img src="img/mischa-pannell-dupe.jpeg" alt="dupe11">
-                    <figure><img src="img/brookie 2.png" alt="brookiedupe"></figure>
-                    <figure><img src="img/blueberry muffins.png" alt=""></figure>
-
-                    </figure>
+                    <figure><img src="../img/camille-brodard-dupe.jpeg" alt="dupe1"></figure>
+                    <figure><img src="../img/sweet-july-dupe.jpeg" alt="dupe2"></figure>
+                    <figure><img src="../img/ginny-ranu-dupe.jpeg" alt="dupe9"></figure>
+                    <figure><img src="../img/erdnezul-bayarkhuu-dupe.jpeg" alt="dupe4"></figure>
+                    <figure><img src="../img/limao.png" alt="limao"></figure>
+                    <figure><img src="../img/sivan-weitz-dupe.jpeg" alt="dupe5"></figure>
+                    <figure><img src="../img/st cake.png" alt="stcake"></figure>
+                    <figure><img src="../img/eleni-sophocleus-dupe.jpeg" alt="dupe6"></figure>
+                    <figure><img src="../img/jordan-hunter-dupe.jpeg" alt="dupe7"></figure>
+                    <figure><img src="../img/ruby--dupe.jpeg" alt="dupe8"></figure>
+                    <figure><img src="../img/erdnezul-bayarkhuu-dupe.jpeg" alt="dupe4"></figure>
+                    <figure><img src="../img/ginny-ranu-dupe.jpeg" alt="dupe9"></figure>
+                    <figure><img src="../img/jade-rideout-dupe (1).jpeg" alt="dupe10"></figure>
+                    <figure><img src="../img/mischa-pannell-dupe.jpeg" alt="dupe11"></figure>
+                    <figure><img src="../img/cookie.jpeg" alt="cookiedupe"></figure>
+                    <figure><img src="../img/macaron.jpeg" alt="macarondupe"></figure>
                 </div>
               </div>
             </section>
@@ -75,7 +73,7 @@
             <div class="card">
                 <div class="img-brookie">
                     <figure>
-                        <img src="img/brookie 2.png" alt="brookie">
+                        <img src="../img/brookie 2.png" alt="brookie">
                       </figure>
                 </div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -91,7 +89,7 @@
               <a href="card2.html">
                 <div class="card2">
                     <figure>
-                        <img src="img/brownie.png" alt="brownie">
+                        <img src="../img/brownie.png" alt="brownie">
                     </figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     </svg>
@@ -106,7 +104,7 @@
               <a href="card3.html">
                 <div class="card3">
                     <figure>
-                        <img src="img/blueberry muffins.png" alt="blueberry muffins">
+                        <img src="../img/blueberry muffins.png" alt="blueberry muffins">
                     </figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     </svg>
@@ -121,7 +119,7 @@
                 <a href="card4.html">
                   <div class="card4">
                     <figure>
-                        <img src="img/cinamon roll.png" alt="cinamon">
+                        <img src="../img/cinamon roll.png" alt="cinamon">
                     </figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     </svg>
@@ -136,7 +134,7 @@
                 <a href="card5.html">
                   <div class="card5">
                     <figure>
-                        <img src="img/cupcake choco.png" alt="cupcakechoco">
+                        <img src="../img/cupcake choco.png" alt="cupcakechoco">
                     </figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     </svg>
@@ -151,7 +149,7 @@
               <a href="card6.html">
                 <div class="card6">
                     <figure>
-                        <img src="img/macarons.png" alt="macarons">
+                        <img src="../img/macarons.png" alt="macarons">
                     </figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     </svg>
