--- a/html/card3.html
+++ b/html/card3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/sweet´ss.png" type="image/x-icon">
-    <link rel="stylesheet" href="stylecards.css">
+    <link rel="stylesheet" href="../css/stylecards.css">
     <title>Brookie</title>
 </head>
 <body>
@@ -29,12 +29,5 @@
             </button>
        
     </header>
-    <div class="parent">
-    <div class="div1">1</div>
-    <div class="div2">2</div>
-    <div class="div3">3</div>
-    <div class="div4">4</div>
-    <div class="div5">5</div>
-</div>
 </body>
 </html>
